# certomancer

./: .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: gh-release-template.md
.github/workflows/: build-pipeline.yml  lint.yml  mypy.yml  pytest-multiver.yml  release.yml  static-analysis.yml
certomancer/: __init__.py  __main__.py  _asn1_types.py  _asn1crypto_patches.py  _eddsa_oids.py  cli.py  config_utils.py  crypto_utils.py  default_plugins.py  registry.py  services.py  smart_values.py  version.py
certomancer/integrations/: _animator_shared.py  aiohttp_animator.py  aiohttp_illusionist.py  alchemist.py  animator.py  illusionist.py
certomancer/integrations/animator_templates/: arch_summary.html  index.html
certomancer/registry/: __init__.py  common.py  config.py  entities.py  keys.py  pki_arch.py  plugin_api.py
certomancer/registry/issued/: attr_cert.py  cert.py  general.py
certomancer/registry/svc_config/: api.py  cert_repo.py  crl.py  ocsp.py  tsa.py
docs/: cli.md  config.md  deploy.md  plugins.md
example_plugin/: encrypt_echo.py
tests/: conftest.py  test_aiohttp_animator.py  test_aiohttp_illusionist.py  test_animator.py  test_certs.py  test_cli.py  test_services.py  test_utils.py
tests/data/: ed25519-config.yml  ed448-config.yml  external-arch-pss-exclusive.yml  external-arch-pss.yml  external-arch.yml  full-service-config.yml  pregenerated-ca-cert.crt  signer2-ocsp-req.der  split-key.key.pem  test-ac-ocsp-req.der  tsa-bad-ocsp-req.der  tsa-ocsp-req.der  tsa.cert.pem  with-arch-templates.yml  with-external-config.yml  with-plugin.yml  with-pregenerated-cert.yml  with-services-dsa.yml  with-services-ecdsa.yml  with-services-ed25519.yml  with-services-ed448.yml  with-services.yml
tests/data/keys-ed25519/: interm-ocsp.key.pem  interm.key.pem  root.key.pem  signer.key.pem  signer2.key.pem  tsa.key.pem  tsa2.key.pem
tests/data/keys-ed448/: interm-ocsp.key.pem  interm.key.pem  root.key.pem  signer.key.pem  signer2.key.pem  tsa.key.pem  tsa2.key.pem
tests/data/keys-rsa/: aa-crl-issuer.key.pem  aa.key.pem  split-key-pub.key.pem
tests/data/keys-rsa-pss-exclusive/: interm-ocsp.key.pem  interm.key.pem  root.key.pem  signer.key.pem  signer2.key.pem  tsa.key.pem  tsa2.key.pem
