[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "certomancer"
dynamic = ["version"]
authors = [{name = "Matthias Valvekens", email = "dev@mvalvekens.be"}]
license = "MIT"
description = "PKI testing tool"
keywords = ["pki", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "asn1crypto==1.5.*",
    "click>=7.1.2",
    "pyyaml>=5.4.1",
    "python-dateutil>=2.8.1",
    "tzlocal>=2.1",
    "cryptography>=3.4.7"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/MatthiasValvekens/certomancer"

[project.optional-dependencies]
web-api = ["Werkzeug>=2.2.3", "Jinja2>=2.11.3"]
pkcs11 = ["python-pkcs11>=0.9.0"]

[dependency-groups]
testing-minimal = [
    "pytest>=6.1.1",
    "freezegun>=1.1.0",
    "requests>=2.0.0",
    "pytest-cov~=4.0.0",
    "pytest-asyncio>=0.26.0",
    "requests-mock>=1.8.0",
    "pyhanko-certvalidator>=0.26.5",
    "certomancer[web-api]"
]
testing = [
    { include-group = "testing-minimal" },
    "certomancer[pkcs11]"
]
mypy = [
    "mypy",
    "types-requests",
    "types-python-dateutil",
    "types-PyYAML",
    "types-tzlocal",
    { include-group = "testing" },
]
lint = ["ruff"]

[project.scripts]
certomancer = "certomancer.__main__:launch"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["certomancer*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"certomancer.integrations" = ["animator_templates/*.html"]
certomancer = ["py.typed"]

[tool.mypy]
files = 'certomancer'

[[tool.mypy.overrides]]
module = [
    "asn1crypto.*",
    "pkcs11.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
testpaths = "tests"
asyncio_mode = "strict"
markers = [
    "config_context: require a specific configuration file"
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes
    "I",  # isort
]

[tool.setuptools_scm]